# light-ocr

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  docker-compose.yml  package-lock.json  package.json
.agents/skills/local-ocr/: SKILL.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apple-qualification.yml  core.yml  npm-promote.yml  npm-release.yml  pull-request.yml  tiled-qualification.yml  webgpu-native.yml  workspace.yml
bindings/node/: CMakeLists.txt  README.md  exports-linux.map  package.json
bindings/node/js/: index.cjs  index.d.ts  load-native.cjs
bindings/node/src/: addon.cpp  bundle_loader.cpp  bundle_loader.hpp  encoded_image.cpp  encoded_image.hpp  exif.cpp  exif.hpp  win_delay_load_hook.cpp
bindings/node/test/: adapter.test.cjs  cli.test.cjs  electron-smoke.cjs  exif.test.cjs  webgpu-qualification.cjs
cmake/: Dependencies.cmake
contracts/: apple-provider-baselines.json  apple-provider-baselines.schema.json
corpus/: contracts.json  generate_corpus.py  goldens-bounded.lock.json  goldens.lock.json  ground-truth.lock.json  parity-exceptions.json  sources.lock.json
corpus/fixtures/generated-blank/: fixture.json
corpus/fixtures/generated-hello-123/: fixture.json
corpus/fixtures/generated-japanese-horizontal/: fixture.json
corpus/fixtures/generated-japanese-rotated/: fixture.json
corpus/fixtures/generated-low-contrast-perspective/: fixture.json
corpus/fixtures/generated-traditional-horizontal/: fixture.json
corpus/fixtures/paddleocr-boarding-pass/: fixture.json
corpus/fixtures/paddleocr-book-page/: fixture.json
corpus/fixtures/paddleocr-captcha-handwriting/: fixture.json
corpus/fixtures/paddleocr-display-simplified/: fixture.json
corpus/fixtures/paddleocr-garden-sign/: fixture.json
corpus/fixtures/paddleocr-rec-phone/: fixture.json
corpus/fixtures/paddleocr-rec-simplified/: fixture.json
corpus/fixtures/paddleocr-xfund-form/: fixture.json
corpus/goldens/: generated-blank.json  generated-hello-123.json  generated-japanese-horizontal.json  generated-japanese-rotated.json  generated-low-contrast-perspective.json  generated-traditional-horizontal.json  paddleocr-boarding-pass.json  paddleocr-book-page.json  paddleocr-captcha-handwriting.json  paddleocr-display-simplified.json  paddleocr-garden-sign.json  paddleocr-rec-phone.json  paddleocr-rec-simplified.json  paddleocr-xfund-form.json
corpus/goldens-bounded/: generated-blank.json  generated-hello-123.json  generated-japanese-horizontal.json  generated-japanese-rotated.json  generated-low-contrast-perspective.json  generated-traditional-horizontal.json  paddleocr-boarding-pass.json  paddleocr-book-page.json  paddleocr-captcha-handwriting.json  paddleocr-display-simplified.json  paddleocr-garden-sign.json  paddleocr-rec-phone.json  paddleocr-rec-simplified.json  paddleocr-xfund-form.json
corpus/tiled-v1/: goldens.lock.json
corpus/tiled-v1/goldens/: tiled-dense-2048.json  tiled-four-way-intersection-2048.json  tiled-horizontal-boundary-2048.json  tiled-near-neighbor-2048.json  (+4 more)
docs/: apple-device-acceleration.md  architecture.md  build-and-release.md  cli-design.md  decisions.md  implementation-status.md  linux-device-acceleration.md  memory-optimization.md  model-bundle.md  monorepo-design.md  napi-design.md  native-api.md  npm-packaging.md  parity-testing.md  python-asset-review.md  requirements.md  roadmap.md  tiled-design-and-acceptance.md  windows-device-acceleration.md
docs/releases/: npm-0.1.0.md  npm-0.2.0.md  npm-0.3.0.md  npm-0.3.2.md  npm-0.4.0.md  npm-0.4.1.md
include/light_ocr/: core.hpp  error.hpp  types.hpp
models/: bundles.lock.json  deps.lock.json
oracle/: benchmark.py  compare.py  generate_goldens.py  generate_smoke_corpus.py  ground_truth.py  oracle.lock.json  oracle.py  requirements.in  run_benchmark.py  run_corpus.py  run_parity.py  run_quality.py  test_compare.py  verify_contracts.py  verify_ground_truth.py
server/: package-lock.json  package.json
server/src/: engine.js  errors.js  server.js
server/test/: engine.test.js  errors.test.js  server.test.js
src/core/: engine.cpp
src/detection/: db_postprocess.cpp  db_postprocess.hpp
src/geometry/: geometry.cpp  geometry.hpp
src/inference/: backend.hpp
src/model/: bundle_data.hpp  model_bundle.cpp
src/preprocess/: image.cpp  image.hpp  tensor.cpp  tensor.hpp
src/recognition/: ctc_decode.cpp  ctc_decode.hpp
src/result/: assemble.hpp  result.cpp
src/util/: checked_math.hpp  sha256.cpp  sha256.hpp
tests/: test.hpp
tests/fuzz/: bundle_fuzz.cpp  encoded_image_fuzz.cpp  geometry_fuzz.cpp  image_fuzz.cpp  lifecycle_fuzz.cpp  standalone_main.cpp
tests/integration/: apple.cpp  main.cpp
tests/python/: npm_release_fixtures.py  test_apple_qualification.py  test_bootstrap_models.py  test_npm_release.py  test_webgpu_qualification.py  test_webgpu_report_review.py  test_webgpu_runtime.py  test_windows_node_addon.py
tests/unit/: main.cpp  test_checked_math.cpp  test_ctc.cpp  test_detection.cpp  test_geometry.cpp  test_image.cpp  test_model_bundle.cpp  test_result.cpp  test_sha256.cpp
tools/: bootstrap_dependencies.py  bootstrap_models.py  cpu-benchmark.mjs  generate_release_metadata.py  npm_release.py  package_model_bundle.py  run_offline_check.py  verify_windows_node_addon.py
tools/apple/: accept_qualification.py  acceptance.json  cache_concurrency_gate.py  capture_identity.py  collect_qualification.py  convert_models.py  fallback_gate.py  package_bundle.py  performance_gate.py  qualify_models.py  quality_gate.py  requirements.in
tools/benchmark/: main.cpp
tools/common/: arguments.hpp  bundle_files.cpp  bundle_files.hpp  process_memory.hpp
tools/leak_check/: main.cpp
tools/npm/: smoke-tier.cjs  smoke.cjs  smoke.ts  verdaccio-release.yaml
tools/stage_probe/: main.cpp
tools/validate/: main.cpp
tools/webgpu/: README.md  package_bundle.py  qualify.py  review_reports.py
(+238 files in other folders)
